@@ -1,0 +1,6 @@
+#!/mnt/us/python/bin/python2.6
+def notepad():
+## -----------Change it if different---------
+#def kindlenot():
+
+#def new
